karma test cases added

--- a/angular/src/app/login/login.component.html
+++ b/angular/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <h1> Fsd-certification-test</h1>
 <div class="container h-100 mt-5">
-<div class="row h-100 justify-content-center align-items-center">
+<div class="row justify-content-center align-items-center">
 <div class="card" style="width: 23rem;">
   <div class="card-body">
     <h3 class="card-title" style="text-align:center">Login</h3><hr> 
