protractor tests added

--- a/angular/src/app/login/login.component.html
+++ b/angular/src/app/login/login.component.html
@@ -24,7 +24,7 @@
             Password is required
           </div>
         </div><br>
-        <a routerLink="/signup">Don't have an account?</a>
+        <a id="SignUp" routerLink="/signup">Don't have an account?</a>
         <button [disabled]="loginFormGroup.invalid" type="submit" class="btn btn-success float-right">Login</button>
       </div>
     
